--- a/package.json
+++ b/package.json
@@ -11,15 +11,26 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
+    "@rehype-pretty/transformers": "^0.13.2",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-simple-typewriter": "^5.0.1",
-    "typewriter-effect": "^2.21.0"
+    "rehype-document": "^7.0.3",
+    "rehype-format": "^5.0.0",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "shiki": "^1.16.2",
+    "typewriter-effect": "^2.21.0",
+    "unified": "^11.0.5",
+    "vfile-reporter": "^8.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
